--- a/intro_javascript/index.html
+++ b/intro_javascript/index.html
@@ -9,6 +9,6 @@
     <link rel="shortcut icon" href="assets/img/favicon.png">
 </head>
 <body>
-    <script src="src/index.js"></script>
+    <script type="module" src="src/index.js"></script>
 </body>
 </html>
